Add servicing status scanner
